# PhotoShare_API

./: README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.db
alembic/: env.py
alembic/versions/: f3d97b612285_.py
src/: schemas.py
src/config/: config.py  settings.py
src/database/: connect.py  models.py
src/repositories/: auth.py
src/services/: auth.py
tests/: conftest.py  test_main.py  test_repository_auth.py
tests/rates/: test_routes_rate.py
tests/repository/: test_repository_auth.py
