[tool.poetry]
name = "PhotoShare_API"
version = "0.1.0"
description = ""
authors = ["IrinaShushkevych <iraolijnyk@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
SQLAlchemy = "^2.0.7"
python-dotenv = "^1.0.0"
alembic = "^1.10.2"
psycopg2-binary = "^2.9.5"
jose = "^1.0.0"
passlib = "^1.7.4"
redis = "^4.5.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
